--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello People
+<html>
+<body>
+  <button onclick="Puck.setTime()">Set Time </button>
+  <script src="https://www.puck-js.com/puck.js"></script>
+</body>
+</html>
