--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
 <body>
   <button onclick="Puck.setTime()">Set Time </button>
+  <button onclick="Puck.write('Bangle.buzz()')">Make Buzz</button>
+  <button onclick="writeFile()">Write File</button>
   <script src="https://www.puck-js.com/puck.js"></script>
+  <script>
+    function writeFile(){
+      Puck.eval('require("Storage").write("a_file","Hey World");\n')
+    }
+  </script>
 </body>
 </html>
